@@ -1,4 +1,5 @@
 1.3.2 - TBD
+    * Added Stereographic projection mode
     * The launcher now remembers Java options changed in the launch settings
     * More descriptive error message when failing to open a texture pack
 
